--- a/imgui.ini
+++ b/imgui.ini
@@ -3,3 +3,13 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
+[Window][Debug1]
+Pos=60,60
+Size=265,97
+Collapsed=0
+
+[Window][Dear ImGui Demo]
+Pos=687,14
+Size=550,680
+Collapsed=1
+
